src/tool/parser/TypestateParser.ts
// Generated from src/tool/Typestate.g4 by ANTLR 4.12.0
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import TypestateListener from "./TypestateListener.js";
import TypestateVisitor from "./TypestateVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


  import { tokenToPos, makeMember, makeId, makeArrayType, makeDecision, makeDecisionState, makeDeclaration, makeMethod, makeState, makePackage, makeImport, makeTypestate } from "../ast_nodes";

export default class TypestateParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly DROP = 18;
	public static readonly END = 19;
	public static readonly ID = 20;
	public static readonly WS = 21;
	public static readonly BlockComment = 22;
	public static readonly LineComment = 23;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_start = 0;
	public static readonly RULE_ref = 1;
	public static readonly RULE_javaType = 2;
	public static readonly RULE_package_statement = 3;
	public static readonly RULE_import_statement = 4;
	public static readonly RULE_typestate_declaration = 5;
	public static readonly RULE_typestate_body = 6;
	public static readonly RULE_state_declaration = 7;
	public static readonly RULE_state_body = 8;
	public static readonly RULE_method = 9;
	public static readonly RULE_decision_state = 10;
	public static readonly RULE_decision = 11;
	public static readonly RULE_id = 12;
	public static readonly literalNames: (string | null)[] = [ null, "'.'", 
                                                            "'[]'", "'package'", 
                                                            "';'", "'import'", 
                                                            "'static'", 
                                                            "'*'", "'typestate'", 
                                                            "'{'", "'}'", 
                                                            "'='", "','", 
                                                            "':'", "'('", 
                                                            "')'", "'<'", 
                                                            "'>'", "'drop'", 
                                                            "'end'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             "DROP", "END", 
                                                             "ID", "WS", 
                                                             "BlockComment", 
                                                             "LineComment" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"start", "ref", "javaType", "package_statement", "import_statement", "typestate_declaration", 
		"typestate_body", "state_declaration", "state_body", "method", "decision_state", 
		"decision", "id",
	];
	public get grammarFileName(): string { return "Typestate.g4"; }
	public get literalNames(): (string | null)[] { return TypestateParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return TypestateParser.symbolicNames; }
	public get ruleNames(): string[] { return TypestateParser.ruleNames; }
	public get serializedATN(): number[] { return TypestateParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, TypestateParser._ATN, TypestateParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public start(): StartContext {
		let localctx: StartContext = new StartContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, TypestateParser.RULE_start);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 29;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===3) {
				{
				this.state = 26;
				localctx._p = this.package_statement();
				localctx.pkg = localctx._p.node;
				}
			}

			this.state = 34;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===5) {
				{
				{
				this.state = 31;
				localctx._import_statement = this.import_statement();
				localctx._i.push(localctx._import_statement);
				}
				}
				this.state = 36;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 37;
			localctx._t = this.typestate_declaration();
			localctx.ast = makeTypestate(localctx.pkg, localctx._i.map(i => i.node), localctx._t.node);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public ref(): RefContext;
	public ref(_p: number): RefContext;
	// @RuleVersion(0)
	public ref(_p?: number): RefContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: RefContext = new RefContext(this, this._ctx, _parentState);
		let _prevctx: RefContext = localctx;
		let _startState: number = 2;
		this.enterRecursionRule(localctx, 2, TypestateParser.RULE_ref, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			{
			this.state = 41;
			localctx._id = this.id();
			localctx.node = localctx._id.node;
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 51;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 2, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					{
					localctx = new RefContext(this, _parentctx, _parentState);
					localctx._r = _prevctx;
					this.pushNewRecursionContext(localctx, _startState, TypestateParser.RULE_ref);
					this.state = 44;
					if (!(this.precpred(this._ctx, 1))) {
						throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
					}
					this.state = 45;
					this.match(TypestateParser.T__0);
					this.state = 46;
					localctx._id = this.id();
					localctx.node = makeMember(localctx._r.node.pos, localctx._r.node, localctx._id.node);
					}
					}
				}
				this.state = 53;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 2, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}

	public javaType(): JavaTypeContext;
	public javaType(_p: number): JavaTypeContext;
	// @RuleVersion(0)
	public javaType(_p?: number): JavaTypeContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: JavaTypeContext = new JavaTypeContext(this, this._ctx, _parentState);
		let _prevctx: JavaTypeContext = localctx;
		let _startState: number = 4;
		this.enterRecursionRule(localctx, 4, TypestateParser.RULE_javaType, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			{
			this.state = 55;
			localctx._ref = this.ref(0);
			localctx.node = localctx._ref.node;
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 63;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 3, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					{
					localctx = new JavaTypeContext(this, _parentctx, _parentState);
					localctx._j = _prevctx;
					this.pushNewRecursionContext(localctx, _startState, TypestateParser.RULE_javaType);
					this.state = 58;
					if (!(this.precpred(this._ctx, 1))) {
						throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
					}
					this.state = 59;
					this.match(TypestateParser.T__1);
					localctx.node = makeArrayType(localctx._j.node.pos, localctx._j.node);
					}
					}
				}
				this.state = 65;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 3, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}
	// @RuleVersion(0)
	public package_statement(): Package_statementContext {
		let localctx: Package_statementContext = new Package_statementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, TypestateParser.RULE_package_statement);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 66;
			localctx._t = this.match(TypestateParser.T__2);
			this.state = 67;
			localctx._ref = this.ref(0);
			this.state = 68;
			this.match(TypestateParser.T__3);
			localctx.node = makePackage(tokenToPos(localctx._t), localctx._ref.node);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public import_statement(): Import_statementContext {
		let localctx: Import_statementContext = new Import_statementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, TypestateParser.RULE_import_statement);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 71;
			localctx._t = this.match(TypestateParser.T__4);
			this.state = 73;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===6) {
				{
				this.state = 72;
				localctx._s = this.match(TypestateParser.T__5);
				}
			}

			this.state = 75;
			localctx._ref = this.ref(0);
			this.state = 78;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===1) {
				{
				this.state = 76;
				this.match(TypestateParser.T__0);
				this.state = 77;
				localctx._star = this.match(TypestateParser.T__6);
				}
			}

			this.state = 80;
			this.match(TypestateParser.T__3);
			localctx.node = makeImport(tokenToPos(localctx._t), localctx._ref.node, localctx._s != null, localctx._star != null);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public typestate_declaration(): Typestate_declarationContext {
		let localctx: Typestate_declarationContext = new Typestate_declarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, TypestateParser.RULE_typestate_declaration);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 83;
			localctx._t = this.match(TypestateParser.T__7);
			this.state = 84;
			localctx._ID = this.match(TypestateParser.ID);
			this.state = 85;
			this.match(TypestateParser.T__8);
			this.state = 86;
			localctx._typestate_body = this.typestate_body();
			this.state = 87;
			this.match(TypestateParser.T__9);
			this.state = 88;
			this.match(TypestateParser.EOF);
			localctx.node = makeDeclaration(tokenToPos(localctx._t), (localctx._ID != null ? localctx._ID.text : undefined), localctx._typestate_body.states);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public typestate_body(): Typestate_bodyContext {
		let localctx: Typestate_bodyContext = new Typestate_bodyContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, TypestateParser.RULE_typestate_body);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 94;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===20) {
				{
				{
				this.state = 91;
				localctx._state_declaration = this.state_declaration();
				localctx._s.push(localctx._state_declaration);
				}
				}
				this.state = 96;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			localctx.states = localctx._s.map(s => s.node);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public state_declaration(): State_declarationContext {
		let localctx: State_declarationContext = new State_declarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, TypestateParser.RULE_state_declaration);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 99;
			localctx._name = this.match(TypestateParser.ID);
			this.state = 100;
			this.match(TypestateParser.T__10);
			this.state = 101;
			localctx._state_body = this.state_body();
			localctx.node = makeState(tokenToPos(localctx._name), (localctx._name != null ? localctx._name.text : undefined), localctx._state_body.node.methods, localctx._state_body.node.isDroppable);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public state_body(): State_bodyContext {
		let localctx: State_bodyContext = new State_bodyContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, TypestateParser.RULE_state_body);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 104;
			localctx._t = this.match(TypestateParser.T__8);
			this.state = 120;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1835008) !== 0)) {
				{
				this.state = 105;
				localctx._method = this.method();
				localctx._m.push(localctx._method);
				this.state = 110;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 7, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 106;
						this.match(TypestateParser.T__11);
						this.state = 107;
						localctx._method = this.method();
						localctx._m.push(localctx._method);
						}
						}
					}
					this.state = 112;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 7, this._ctx);
				}
				this.state = 118;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===12) {
					{
					this.state = 113;
					this.match(TypestateParser.T__11);
					this.state = 114;
					this.match(TypestateParser.DROP);
					this.state = 115;
					this.match(TypestateParser.T__12);
					this.state = 116;
					this.match(TypestateParser.END);
					localctx.isDroppable = true;
					}
				}

				}
			}

			this.state = 122;
			this.match(TypestateParser.T__9);
			localctx.node = makeState(tokenToPos(localctx._t), null, localctx._m.map(it => it.node), localctx.isDroppable);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public method(): MethodContext {
		let localctx: MethodContext = new MethodContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, TypestateParser.RULE_method);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 125;
			localctx._return_type = this.javaType(0);
			this.state = 126;
			localctx._name = this.match(TypestateParser.ID);
			this.state = 127;
			this.match(TypestateParser.T__13);
			this.state = 136;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1835008) !== 0)) {
				{
				this.state = 128;
				localctx._javaType = this.javaType(0);
				localctx._args.push(localctx._javaType);
				this.state = 133;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===12) {
					{
					{
					this.state = 129;
					this.match(TypestateParser.T__11);
					this.state = 130;
					localctx._javaType = this.javaType(0);
					localctx._args.push(localctx._javaType);
					}
					}
					this.state = 135;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			this.state = 138;
			this.match(TypestateParser.T__14);
			this.state = 139;
			this.match(TypestateParser.T__12);
			this.state = 149;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 18:
			case 19:
			case 20:
				{
				this.state = 140;
				localctx._id = this.id();
				localctx.destination = localctx._id.node;
				}
				break;
			case 9:
				{
				this.state = 143;
				localctx._state_body = this.state_body();
				localctx.destination = localctx._state_body.node;
				}
				break;
			case 16:
				{
				this.state = 146;
				localctx._decision_state = this.decision_state();
				localctx.destination = localctx._decision_state.node;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			localctx.node = makeMethod(localctx._return_type.node.pos, localctx._return_type.node, (localctx._name != null ? localctx._name.text : undefined), localctx._args.map(a => a.node), localctx.destination);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public decision_state(): Decision_stateContext {
		let localctx: Decision_stateContext = new Decision_stateContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, TypestateParser.RULE_decision_state);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 153;
			localctx._t = this.match(TypestateParser.T__15);
			this.state = 154;
			localctx._decision = this.decision();
			localctx._decisions.push(localctx._decision);
			this.state = 159;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===12) {
				{
				{
				this.state = 155;
				this.match(TypestateParser.T__11);
				this.state = 156;
				localctx._decision = this.decision();
				localctx._decisions.push(localctx._decision);
				}
				}
				this.state = 161;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 162;
			this.match(TypestateParser.T__16);
			localctx.node = makeDecisionState(tokenToPos(localctx._t), localctx._decisions.map(d => d.node));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public decision(): DecisionContext {
		let localctx: DecisionContext = new DecisionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, TypestateParser.RULE_decision);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 165;
			localctx._label = this.match(TypestateParser.ID);
			this.state = 166;
			this.match(TypestateParser.T__12);
			this.state = 173;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 18:
			case 19:
			case 20:
				{
				this.state = 167;
				localctx._id = this.id();
				localctx.node = makeDecision(tokenToPos(localctx._label), (localctx._label != null ? localctx._label.text : undefined), localctx._id.node);
				}
				break;
			case 9:
				{
				this.state = 170;
				localctx._state_body = this.state_body();
				localctx.node = makeDecision(tokenToPos(localctx._label), (localctx._label != null ? localctx._label.text : undefined), localctx._state_body.node);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public id(): IdContext {
		let localctx: IdContext = new IdContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, TypestateParser.RULE_id);
		try {
			this.state = 181;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 18:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 175;
				localctx._DROP = this.match(TypestateParser.DROP);
				localctx.node = makeId(tokenToPos(localctx._DROP), (localctx._DROP != null ? localctx._DROP.text : undefined));
				}
				break;
			case 19:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 177;
				localctx._END = this.match(TypestateParser.END);
				localctx.node = makeId(tokenToPos(localctx._END), (localctx._END != null ? localctx._END.text : undefined));
				}
				break;
			case 20:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 179;
				localctx._ID = this.match(TypestateParser.ID);
				localctx.node = makeId(tokenToPos(localctx._ID), (localctx._ID != null ? localctx._ID.text : undefined));
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public sempred(localctx: RuleContext, ruleIndex: number, predIndex: number): boolean {
		switch (ruleIndex) {
		case 1:
			return this.ref_sempred(localctx as RefContext, predIndex);
		case 2:
			return this.javaType_sempred(localctx as JavaTypeContext, predIndex);
		}
		return true;
	}
	private ref_sempred(localctx: RefContext, predIndex: number): boolean {
		switch (predIndex) {
		case 0:
			return this.precpred(this._ctx, 1);
		}
		return true;
	}
	private javaType_sempred(localctx: JavaTypeContext, predIndex: number): boolean {
		switch (predIndex) {
		case 1:
			return this.precpred(this._ctx, 1);
		}
		return true;
	}


	private static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!TypestateParser.__ATN) {
			TypestateParser.__ATN = new ATNDeserializer().deserialize(TypestateParser._serializedATN);
		}

		return TypestateParser.__ATN;
	}


	static DecisionsToDFA = TypestateParser._ATN.decisionToState.map( (ds: DecisionState, index: number) => new DFA(ds, index) );

}

export class StartContext extends ParserRuleContext {
	public ast: makeTypestate;
	public pkg: makePackage;
	public _p!: Package_statementContext;
	public _import_statement!: Import_statementContext;
	public _i: Import_statementContext[] = [];
	public _t!: Typestate_declarationContext;
	constructor(parser?: TypestateParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public typestate_declaration(): Typestate_declarationContext {
		return this.getTypedRuleContext(Typestate_declarationContext, 0) as Typestate_declarationContext;
	}
	public package_statement(): Package_statementContext {
		return this.getTypedRuleContext(Package_statementContext, 0) as Package_statementContext;
	}
	public import_statement_list(): Import_statementContext[] {
		return this.getTypedRuleContexts(Import_statementContext) as Import_statementContext[];
	}
	public import_statement(i: number): Import_statementContext {
		return this.getTypedRuleContext(Import_statementContext, i) as Import_statementContext;
	}
    public get ruleIndex(): number {
    	return TypestateParser.RULE_start;
	}
	public enterRule(listener: TypestateListener): void {
	    if(listener.enterStart) {
	 		listener.enterStart(this);
		}
	}
	public exitRule(listener: TypestateListener): void {
	    if(listener.exitStart) {
	 		listener.exitStart(this);
		}
	}
	// @Override
	public accept<Result>(visitor: TypestateVisitor<Result>): Result {
		if (visitor.visitStart) {
			return visitor.visitStart(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class RefContext extends ParserRuleContext {
	public node: TRefNode;
	public _r!: RefContext;
	public _id!: IdContext;
	constructor(parser?: TypestateParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public id(): IdContext {
		return this.getTypedRuleContext(IdContext, 0) as IdContext;
	}
	public ref(): RefContext {
		return this.getTypedRuleContext(RefContext, 0) as RefContext;
	}
    public get ruleIndex(): number {
    	return TypestateParser.RULE_ref;
	}
	public enterRule(listener: TypestateListener): void {
	    if(listener.enterRef) {
	 		listener.enterRef(this);
		}
	}
	public exitRule(listener: TypestateListener): void {
	    if(listener.exitRef) {
	 		listener.exitRef(this);
		}
	}
	// @Override
	public accept<Result>(visitor: TypestateVisitor<Result>): Result {
		if (visitor.visitRef) {
			return visitor.visitRef(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class JavaTypeContext extends ParserRuleContext {
	public node: TRefNode;
	public _j!: JavaTypeContext;
	public _ref!: RefContext;
	constructor(parser?: TypestateParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public ref(): RefContext {
		return this.getTypedRuleContext(RefContext, 0) as RefContext;
	}
	public javaType(): JavaTypeContext {
		return this.getTypedRuleContext(JavaTypeContext, 0) as JavaTypeContext;
	}
    public get ruleIndex(): number {
    	return TypestateParser.RULE_javaType;
	}
	public enterRule(listener: TypestateListener): void {
	    if(listener.enterJavaType) {
	 		listener.enterJavaType(this);
		}
	}
	public exitRule(listener: TypestateListener): void {
	    if(listener.exitJavaType) {
	 		listener.exitJavaType(this);
		}
	}
	// @Override
	public accept<Result>(visitor: TypestateVisitor<Result>): Result {
		if (visitor.visitJavaType) {
			return visitor.visitJavaType(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class Package_statementContext extends ParserRuleContext {
	public node: makePackage;
	public _t!: Token;
	public _ref!: RefContext;
	constructor(parser?: TypestateParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public ref(): RefContext {
		return this.getTypedRuleContext(RefContext, 0) as RefContext;
	}
    public get ruleIndex(): number {
    	return TypestateParser.RULE_package_statement;
	}
	public enterRule(listener: TypestateListener): void {
	    if(listener.enterPackage_statement) {
	 		listener.enterPackage_statement(this);
		}
	}
	public exitRule(listener: TypestateListener): void {
	    if(listener.exitPackage_statement) {
	 		listener.exitPackage_statement(this);
		}
	}
	// @Override
	public accept<Result>(visitor: TypestateVisitor<Result>): Result {
		if (visitor.visitPackage_statement) {
			return visitor.visitPackage_statement(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class Import_statementContext extends ParserRuleContext {
	public node: makeImport;
	public _t!: Token;
	public _s!: Token;
	public _ref!: RefContext;
	public _star!: Token;
	constructor(parser?: TypestateParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public ref(): RefContext {
		return this.getTypedRuleContext(RefContext, 0) as RefContext;
	}
    public get ruleIndex(): number {
    	return TypestateParser.RULE_import_statement;
	}
	public enterRule(listener: TypestateListener): void {
	    if(listener.enterImport_statement) {
	 		listener.enterImport_statement(this);
		}
	}
	public exitRule(listener: TypestateListener): void {
	    if(listener.exitImport_statement) {
	 		listener.exitImport_statement(this);
		}
	}
	// @Override
	public accept<Result>(visitor: TypestateVisitor<Result>): Result {
		if (visitor.visitImport_statement) {
			return visitor.visitImport_statement(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

